samples/pass/global_string.c
char msg[6] = "hello";

int main() {
    print_str(msg);
    print_newline();
    return 0;
}
