samples/fail/string_too_long.c
int main() {
    char s[4] = "hello";
    return 0;
}
